# bensemble

./: .gitattributes  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  README.rst  index.html  init.py  objects.inv  old_rdm_contents.txt  paper.bib  paper.md  pyproject.toml  requirements.txt  setup.py  sitemap.xml  todo.md
.github/workflows/: draft-pdf.yml  test.yaml  test.yml
algorithms/laplace/: index.html
algorithms/mc-dropout/: index.html
algorithms/nes/: index.html
algorithms/nesbs/: index.html
algorithms/pbp/: index.html
algorithms/variational-inference/: index.html
algorithms/variational-renyi/: index.html
api/calibration/: index.html
api/core/: index.html
api/layers/: index.html
api/metrics/: index.html
api/search/: index.html
api/uncertainty/: index.html
benchmarks/: classification_benchmark.py  regression_benchmark.py
bensemble/: __init__.py  losses.py  metrics.py  uncertainty.py  utils.py
bensemble/calibration/: scaling.py
bensemble/core/: base.py  ensemble.py  member.py  types.py  utils.py
bensemble/diversity/: __init__.py  dropout.py
bensemble/layers/: __init__.py  base.py  conv.py  linear.py
bensemble/methods/: __init__.py  laplace_approximation.py  prob_back_prop.py  probabilistic_backpropagation.py  variational_inference.py  variational_renyi.py
bensemble/search/: __init__.py  bayesian.py  nes.py  selection.py  space.py
bensemble/uncertainty/: __init__.py  decomposition.py
blog/: bensemble-blogpost.md
code/: main.ipynb
core/: base.py  utils.py
data/: download_data.py
docs/: mkdocs.yml
docs/docs/: getting-started.md  index.md  references.md
docs/site/: 404.html  index.html  search.html  sitemap.xml
examples/: deep_ensembles_tutorial.ipynb  laplace_demo.ipynb  mc_dropout_demo.ipynb  nes_re_demo.ipynb
getting-started/: index.html
methods/: laplace_approximation.py  prob_back_prop.py  probabilistic_backpropagation.py  variational_inference.py  variational_renyi.py
notebooks/: KFLA_vibe_version.ipynb  NESBS_demo.ipynb  benchmark.ipynb  benchmarks_new_methods.ipynb  intro_to_variational_inference.ipynb  laplace_demo.ipynb  mc_dropout_demo.ipynb  nes_rs_demo.ipynb  pbp_demo.ipynb  pbp_probabilistic_backpropagation_test.ipynb  pvi_demo.ipynb  variatinal_renyi_demo.ipynb
paper/: cas-common.sty  cas-refs.bib  main.tex
paper/blogpost/: bensemble-blogpost.md
paper/techreport/: cas-refs.bib
paper/techreport_draft/: main.tex
references/: index.html
search/: search_index.json
slides/: Bensemble_Introduction_30.09.2025.tex
src/: setup.py
src/mylib/: train.py
tests/: conftest.py  test_bayesian_search.py  test_laplace_approximation.py  test_losses.py  test_metrics.py  test_probabilistic_backpropagation.py  test_simple.py  test_uncertainty.py  test_utils.py  test_variational_inference.py  test_variational_renyi.py
tests/calibration/: test_scaling.py
tests/core/: test_ensemble.py
tests/diversity/: test_dropout.py
tests/integration/: test_integration.py
tests/layers/: test_conv.py  test_linear.py
tests/methods/: test_laplace_approximation.py  (+1 more)
tests/search/: test_nes.py  (+3 more)
(+42 files in other folders)
