[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bensemble"
version = "0.2.2"
description = "Library with implementations of various ensembling methods."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["bayesian", "neural network", "ensemble", "variational inference", "renyi"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

authors =[
  {name = "Dmitrii Vasilenko"},
  {name = "Fedor Sobolevsky"},
  {name = "Muhammadsharif Nabiev"},
  {name = "Vadim Kasyuk"}
]

dependencies = [
    "torch>=2.9.1",
    "numpy>=2.2.6",
    "matplotlib>=3.10.7",
    "scipy>=1.15.3"
]

[project.optional-dependencies]
dev =[
    "pytest",
    "pytest-cov",
    "nbqa",
    "mypy",
    "ruff"
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-minify-plugin",
    "pymdown-extensions",
    "python-markdown-math"
]

[project.urls]
Homepage = "https://github.com/intsystems/bensemble"
"Bug_Tracker" = "https://github.com/intsystems/bensemble/issues"
Documentation = "https://github.com/intsystems/bensemble#readme"
Source = "https://github.com/intsystems/bensemble"

[tool.setuptools.packages.find]
where = ["."]
include = ["bensemble*"]
